--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,8 @@ body{
 }
 .cookie{
     height: 200px;
-    width: 220px;
-    padding-left: 5%;
-    padding-top: 20%;
+    width: 200px;
+    animation: rotation 30s infinite linear;
 }
 .counter{
     background: linear-gradient(#3c67e3 43%, #5ddcff);
@@ -30,3 +29,11 @@ body{
     -webkit-text-fill-color: transparent;
     font-size: 300%;
 }
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
