--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@ body{
 }
 
 .out{
-    background-image: linear-gradient(#5ddcff, #3c67e3 43%, #4e00c2);
     height: 500px;
     width: 250px;
+    background-color: bisque;
 }
 
 .in1{
@@ -28,8 +28,8 @@ body{
     width: 240px;
     position: relative;
     top: 10px;
-    text-align: center;
 }
+
 
 .cookie-jar{
     height: 200px;
@@ -50,10 +50,32 @@ body{
 }
 
 .counter{
-    background: linear-gradient(#3c67e3 43%, #5ddcff);
+    background: #ffe4c4;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 300%;
+}
+
+.stats{
+    color: bisque;
+    font-size: large;
+}
+
+.click-auto{
+    height: 30px;
+    width: 30px;
+    border: bisque solid 4px;
+    background: #212534;
+    border-radius: 20%;
+    position: relative;
+    top: 5px;
+    left: 5px;
+    text-align:center;
+}
+
+.click-auto:active{
+    height: 25px;
+    width: 25px;
 }
 
 @keyframes rotation {
