--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #212121;
+    background-color: bisque;
     color: bisque;
 }
 .score-holder{
@@ -18,6 +18,8 @@ body {
 }
 
 .card-img-top:active{
+    position: relative;
+    top: 15px;
     height: 245px;
     width: 245px;
 }
